--- a/index.html
+++ b/index.html
@@ -2,12 +2,79 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 </head>
 
 <body>
-    Hello, World!
     <canvas id="c"></canvas>
-    <script src="./main.js" type="js"></script>
 </body>
+<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+<script type="importmap">
+        {
+          "imports": {
+            "three": "./node_modules/three/build/three.module.js"
+          }
+        }
+    </script>
+<!-- <script src="./main.js" type="js"></script> -->
+<script type="module">
+    import * as THREE from 'three';
+
+    function main() {
+        const canvas = document.querySelector('#c');
+        const renderer = new THREE.WebGLRenderer({ antialias: true, canvas });
+
+        const fov = 75; // field of view ; 75 degrees in the vertical dimension. The most angles in three.js are in radians but for some reason the perspective camera takes degree.
+        const aspect = 2;   // the display aspect of the canvas. by default a canvas is 300 x 150 pixels which makes the aspect 300/150 ( = 2)
+        const near = 0.1;   // the space in front of the camera this will be rendered
+        const far = 5;
+
+        const camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+        camera.position.z = 2;  // we need to move the camera back a little bit from the origin in order to see anything
+
+        const scene = new THREE.Scene();    // the root of a form of scene graph
+
+        // create a BoxGeometry which contains the data for a box
+        const boxWidth = 1;
+        const boxHeight = 1;
+        const boxDepth = 1;
+        const geometry = new THREE.BoxGeometry(boxWidth, boxHeight, boxDepth);
+
+        // create a directional light
+        const color = 0xffffff;
+        const intensity = 1;
+        const light = new THREE.DirectionalLight(color, intensity);
+
+        // Directional lights have a position and a target, which default to 0, 0, 0
+        // -1, 2, 4 so it's slightly on the left, above, and behind our camera
+        light.position.set(-1, 2, 4);
+        scene.add(light);
+
+        // create a basic material and set its color
+        const material = new THREE.MeshPhongMaterial({ color: 0x44aa88 });
+
+        // create a Mesh which represents the three things; a Geometry, a Material, (the position, the orientation, and scale of that object in the scene relative to its parent)
+        const cube = new THREE.Mesh(geometry, material);
+        scene.add(cube);
+
+        function render(time) {
+            time *= 0.001;  // convert time to seconds
+
+            // These rotations are in radians.
+            // There are 2 pi radians in a circle so our cube should turn around once on each axis in about 6.28 seconds
+            cube.rotation.x = time;
+            cube.rotation.y = time;
+
+            renderer.render(scene, camera);
+
+            requestAnimationFrame(render);
+        }
+
+        requestAnimationFrame(render);
+    }
+
+    main();
+</script>
 
 </html>
