--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         const canvas = document.querySelector('#c');
         const renderer = new THREE.WebGLRenderer({ antialias: true, canvas });
 
-        const fov = 75; // field of view ; 75 degrees in the vertical dimension. The most angles in three.js are in radians but for some reason the perspective camera takes degree.
+        const fov = 75;     // field of view ; 75 degrees in the vertical dimension. The most angles in three.js are in radians but for some reason the perspective camera takes degree.
         const aspect = 2;   // the display aspect of the canvas. by default a canvas is 300 x 150 pixels which makes the aspect 300/150 ( = 2)
         const near = 0.1;   // the space in front of the camera this will be rendered
         const far = 5;
@@ -51,20 +51,40 @@
         light.position.set(-1, 2, 4);
         scene.add(light);
 
-        // create a basic material and set its color
-        const material = new THREE.MeshPhongMaterial({ color: 0x44aa88 });
+        // // create a basic material and set its color
+        // const material = new THREE.MeshPhongMaterial({ color: 0x44aa88 });
 
-        // create a Mesh which represents the three things; a Geometry, a Material, (the position, the orientation, and scale of that object in the scene relative to its parent)
-        const cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
+        // // create a Mesh which represents the three things; a Geometry, a Material, (the position, the orientation, and scale of that object in the scene relative to its parent)
+        // const cube = new THREE.Mesh(geometry, material);
+        // scene.add(cube);
+
+        function makeInstance(geometry, color, x) {
+            const material = new THREE.MeshPhongMaterial({ color });
+
+            const cube = new THREE.Mesh(geometry, material);
+            scene.add(cube);
+
+            cube.position.x = x;
+
+            return cube;
+        }
+
+        const cubes = [makeInstance(geometry, 0x44aa88, 0), makeInstance(geometry, 0x8844aa, -2), makeInstance(geometry, 0xaa8844, 2)];
 
         function render(time) {
             time *= 0.001;  // convert time to seconds
 
-            // These rotations are in radians.
-            // There are 2 pi radians in a circle so our cube should turn around once on each axis in about 6.28 seconds
-            cube.rotation.x = time;
-            cube.rotation.y = time;
+            // // These rotations are in radians.
+            // // There are 2 pi radians in a circle so our cube should turn around once on each axis in about 6.28 seconds
+            // cube.rotation.x = time;
+            // cube.rotation.y = time;
+
+            cubes.forEach((cube, ndx) => {
+                const speed = 1 + ndx * 0.1;
+                const rot = time * speed;
+                cube.rotation.x = rot;
+                cube.rotation.y = rot;
+            });
 
             renderer.render(scene, camera);
 
