--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <canvas id="c"></canvas>
 </body>
 <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+<!-- An import map should be used to tell the browser where to find three.js -->
 <script type="importmap">
-        {
-          "imports": {
-            "three": "./node_modules/three/build/three.module.js"
-          }
+    {
+        "imports": {
+        "three": "./node_modules/three/build/three.module.js"
         }
-    </script>
-<!-- <script src="./main.js" type="js"></script> -->
+    }
+</script>
 <script type="module">
     import * as THREE from 'three';
 
